<resources>
    <string name="app_name">SWD</string>
    <string name="selectdate">Wybierz datę</string>
    <string name="data_wyjazdu">Data wyjazdu</string>
    <string name="data_powrotu">Data powrotu</string>
    <string name="wybierz_dat">Wybierz datę...</string>
    <string name="miejsce">Miejsce</string>
    <string name="morze">Morze</string>
    <string name="mountains">Góry</string>
    <string name="jezioro">Jezioro</string>
    <string name="miasto">Miasto</string>
    <string name="klimat">Klimat</string>
    <string name="cieplo">Ciepły</string>
    <string name="umiarkowanie">Umiarkowany</string>
    <string name="chlodno">Zimny</string>
    <string name="snieg">snieg</string>
    <string name="aktywnosc">Aktywność</string>
    <string name="opalanie">Opalanie się</string>
    <string name="zwiedzanie">Zwiedzanie</string>
    <string name="sport">Sport</string>
    <string name="muzeum">Muzeum</string>
    <string name="ruiny">Ruiny</string>
    <string name="swiatynia_zamek">Świątynia lub zamek</string>
    <string name="pomnik">Pomnik</string>
    <string name="natura">Natura</string>
    <string name="narty_snowboard">Narty/snowboard</string>
    <string name="cena">Cena</string>
    <string name="transport">Środek transportu</string>
    <string name="prom">Prom</string>
    <string name="autokar">Autokar</string>
    <string name="pociag">Pociąg</string>
    <string name="samochod">Samochód</string>
    <string name="samolot">Samolot</string>
    <string name="wyznacz">Wyznacz</string>
    <string name="tajlandia">Tajlandia</string>
    <string name="dodaj_opcj">Dodaj opcję</string>
    <string name="wyznacz2">Wyznacz</string>
    <string name="zapisz">Zapisz</string>
    <string name="egzotyka">Egzotyka</string>
    <string name="message">Czy na pewno chcesz usunąć?</string>
    <string name="ok">Usuń</string>
    <string name="cancel">Anuluj</string>
</resources>
