<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_wyjazdu"/>
        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/selectdate"
                android:cropToPadding="true"
                android:src="@drawable/calendar_icon" />

            <TextView
                android:id="@+id/editText"
                android:layout_width="250dp"
                android:layout_marginTop="10dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/imageButton1"
                android:textSize="20sp">
            </TextView>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/data_powrotu"/>

        <RelativeLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/selectdate"
                android:cropToPadding="true"
                android:src="@drawable/calendar_icon" />

            <TextView
                android:id="@+id/editText2"
                android:layout_width="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_height="50dp"
                android:layout_toRightOf="@id/imageButton2"
                android:textSize="20sp">
            </TextView>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miejsce"/>

            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="@string/morze"
                    android:id="@+id/morze"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="@string/mountains"
                    android:id="@+id/gory"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="@string/jezioro"
                    android:id="@+id/jezioro"/>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calendar_icon"
                    android:contentDescription="@string/miasto"
                    android:id="@+id/miasto"/>
            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/klimat"/>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/cieplo" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/umiarkowanie" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/chlodno" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/snieg" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/aktywnosc"/>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/opalanie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/opalanie" />
            <ImageButton
                android:id="@+id/zwiedzanie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/zwiedzanie" />
            <ImageButton
                android:id="@+id/sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/sport" />
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:visibility="gone"
            android:id="@+id/zwiedzanieLayout">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/muzeum" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/ruiny" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/swiatynia_zamek" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/pomnik" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/natura" />
        </LinearLayout>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/sportLayout"
            android:visibility="gone">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/narty_snowboard" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cena"/>

        <Spinner
            android:id="@+id/ceny"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/transport"/>

        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/transp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/samolot" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/samochod" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/pociag" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/autokar" />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar_icon"
                android:contentDescription="@string/prom" />
        </LinearLayout>

        <Button android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/wyznacz"
            android:onClick="wyznacz"/>
    </TableLayout>
</ScrollView>
</LinearLayout>